--- a/usuallyUsing.css
+++ b/usuallyUsing.css
@@ -2,8 +2,8 @@ button {
     background: none;
     border: 0;
     box-sizing: border-box;
-    box-shadow: inset 0 0 0 2px #f45e61;
-    color: #f45e61;
+    box-shadow: inset 0 0 0 2px #7b6d6d;
+    color: #785e5e;
     font-size: inherit;
     font-weight: 700;
     margin: 1em;
