--- a/css/style.css
+++ b/css/style.css
@@ -146,10 +146,10 @@ h1 {
   width: 100%;
 }
 .header-back.one {
-  background: url('../img/header_one.jpg') 50% 0 no-repeat;
+  background: url('../img/f1.png') 50% 0 no-repeat;
 }
 .header-back.two {
-  background: url('../img/header_two.jpg') 50% 0 no-repeat;
+  background: url('../img/f2.png') 50% 0 no-repeat;
 }
 .header-back.three {
   background: url('../img/header_three.png') 50% 0 no-repeat;
