--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ h1 {
   width: 100%;
 }
 .header-back.one {
-  background: url('../img/f1.png') 50% 0 no-repeat;
+  background: url('../img/f1.jpg') 50% 0 no-repeat;
 }
 .header-back.two {
   background: url('../img/f2.png') 50% 0 no-repeat;
